# mink-idl-compiler

./: .gitignore  A.idl  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md  release-please-config.json
.github/: release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pr_template.md
.github/workflows/: README.md  release-please-config.json  release.yaml  rust.yml
docs/: architecture.md
grammar/: idl.pest
idlc/: Cargo.toml  build.rs
idlc/src/: cli.rs  errors.rs  lib.rs  main.rs  timer.rs
idlc/tests/: cli_negative.rs
idlc_ast/: Cargo.toml  README.md
idlc_ast/grammar/: idl.pest
idlc_ast/src/: ast.rs  idl_grammar.pest  idl_parser.rs  lib.rs  main.rs  pst.rs  visitor.rs
idlc_ast/src/ast/: mod.rs  visitor.rs
idlc_ast/src/ast/tests/: mod.rs  parser.rs
idlc_ast/src/passes/: duplicate.rs  includes.rs  mod.rs  struct_verifier.rs
idlc_ast/src/tests/: ast.rs  mod.rs  parser.rs
idlc_ast_passes/: Cargo.toml
idlc_ast_passes/src/: cycles.rs  dependency_resolver.rs  functions.rs  graph.rs  idl_store.rs  includes.rs  lib.rs  struct_verifier.rs
idlc_ast_passes/tests/: consts.rs  cycles.rs  dependency_resolver.rs  functions.rs  idl_store.rs  structs.rs
idlc_ast_passes/tests/test_data/: invalid_file.idl  invalid_trailing_path.idl
idlc_ast_passes/tests/test_data/cycle_with_include_paths/: b.idl
idlc_ast_passes/tests/test_data/cycle_with_include_paths/test_inner/: d.idl
idlc_ast_passes/tests/test_data/cycle_without_include_paths/: a.idl  b.idl
idlc_ast_passes/tests/test_data/no_cycle_with_duplicate_file_with_include_paths/: a.idl
idlc_ast_passes/tests/test_data/no_cycle_without_include_paths/: b.idl
idlc_codegen/: Cargo.toml  build.rs
idlc_codegen/src/: counts.rs  documentation.rs  functions.rs  keywords.rs  lib.rs  marking.rs  serialization.rs
idlc_codegen_c/: Cargo.toml
idlc_codegen_c/src/: generator.rs  globals.rs  lib.rs  types.rs
idlc_codegen_c/src/interface/: mod.rs  variable_names.rs
idlc_codegen_c/src/interface/functions/: implementation.rs  invoke.rs  mod.rs  serialization.rs  signature.rs
idlc_codegen_cpp/: Cargo.toml
idlc_codegen_cpp/src/: generator.rs  lib.rs
idlc_codegen_cpp/src/interface/: mod.rs
idlc_codegen_cpp/src/interface/functions/: implementation.rs  invoke.rs  mod.rs  serialization.rs  signature.rs
idlc_codegen_java/: Cargo.toml
idlc_codegen_java/src/: generator.rs  globals.rs  lib.rs  types.rs
idlc_codegen_java/src/interface/: mink_primitives.rs  mod.rs
idlc_codegen_java/src/interface/functions/: implementation.rs  invoke.rs  mod.rs  serialization.rs  signature.rs  traits.rs
idlc_codegen_rust/: Cargo.toml
idlc_codegen_rust/src/: generator.rs  globals.rs  ident.rs  lib.rs  types.rs
idlc_codegen_rust/src/interface/: error.rs  mink_primitives.rs  mod.rs  variable_names.rs
idlc_codegen_rust/src/interface/functions/: documentation.rs  implementation.rs  invoke.rs  mod.rs  serialization.rs  signature.rs  traits.rs
idlc_errors/: Cargo.toml
idlc_errors/src/: lib.rs
idlc_mir/: Cargo.toml
idlc_mir/src/: lib.rs  mir.rs  named_version.rs
idlc_mir/tests/: mir.rs
idlc_mir_passes/: Cargo.toml
idlc_mir_passes/src/: interface_verifier.rs  lib.rs
idlc_mir_passes/tests/: interface_verifier.rs
src/: main.rs
src/ast/: mod.rs
src/ast/tests/: parser.rs
src/passes/: includes.rs  mod.rs
src/tests/: mod.rs  parser.rs
tests/: Cargo.toml  README.md  build.rs
tests/c/: ITest_invoke.h  header.h  invoke.c  object.h
tests/cpp/: impl_base.hpp  main.cpp  proxy_base.hpp
tests/idl/: ITest.idl  ITest3.idl
tests/src/: lib.rs
tests/src/implementation/: mod.rs  test1.rs  test2.rs
tests/src/object/: error.rs  mod.rs  wrapper.rs
tests/tests/: c.rs  c.rs.ignore  cpp.rs  cpp.rs.ignore  ffi.rs  main.rs
