[package]
name = "minkidl"
version = "0.1.0"
edition = "2021"
authors = [ "Arvind Mukund<arvimuku@quicinc.com" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
pest = "2.6.0"
pest_derive = "2.6.0"

[profile.opt]
inherits = "release"
lto = true
codegen-units = 1
strip = true
panic = "abort"
