[workspace]

members = [
    "idlc",
    "idlc_ast",
    "idlc_ast_passes",
    "idlc_mir",
    "idlc_codegen_c",
    "idlc_codegen_cpp",
    "idlc_codegen_java",
    "idlc_codegen_rust",
    "idlc_errors"
]

[profile.opt]
inherits = "release"
lto = true
codegen-units = 1
strip = true
panic = "abort"
