[package]
name = "idlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
idlc_ast = { path="../idlc_ast" }
idlc_ast_passes = { path="../idlc_ast_passes" }
idlc_mir = { path="../idlc_mir" }
idlc_mir_passes = { path="../idlc_mir_passes" }
