[package]
name = "idlc_ast"
version = "0.1.0"
edition = "2021"
authors = [ "Arvind Mukund<arvimuku@quicinc.com" ]
description = "AST structure for IDL; contains grammar and AST generators"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idlc_errors = { version = "0.1.0", path = "../idlc_errors" }
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.56"
