[package]
name = "idlc_ast"
version.workspace = true
edition = "2021"
authors = [ "Arvind Mukund<arvimuku@quicinc.com" ]
description = "AST structure for IDL; contains grammar and AST generators"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idlc_errors = { version = "0.2.0", path = "../idlc_errors" }
pest = "2.7.9"
pest_derive = "2.7.9"
thiserror = "1.0.59"
