[package]
name = "idlc_ast_passes"
version = "0.1.0"
edition = "2021"
authors = [ "Arvind Mukund<arvimuku@quicinc.com" ]
description = "Contains compiler passes over raw AST"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"idlc_ast" = { path="../idlc_ast" }
thiserror = "1.0.49"

[dev-dependencies]
serial_test = "*"
