[package]
name = "idlc_ast_passes"
version = "0.3.0"
edition = "2021"
description = "Contains compiler passes over raw AST"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"idlc_ast" = { path="../idlc_ast" }
idlc_errors = {path = "../idlc_errors" }
thiserror = "1.0.59"

[dev-dependencies]
serial_test = "*"

[package.metadata.workspaces]
independent = true
