[package]
name = "idlc_codegen_c"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idlc_codegen = { path="../idlc_codegen" }
idlc_errors = { path="../idlc_errors" }
idlc_mir = { path="../idlc_mir" }
heck = "0.5"

[package.metadata.workspaces]
independent = true
