[package]
name = "idlc_codegen_cpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idlc_codegen_c = { path="../idlc_codegen_c" }
idlc_codegen = { path="../idlc_codegen" }
idlc_mir = { path="../idlc_mir" }
