[package]
name = "idlc_codegen_java"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
idlc_codegen = { path="../idlc_codegen" }
idlc_mir = { path="../idlc_mir" }

[package.metadata.workspaces]
independent = true
