[package]
name = "idlc_codegen_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
idlc_codegen = { path="../idlc_codegen" }
idlc_errors = { version = "0.1.0", path = "../idlc_errors" }
idlc_mir = { path="../idlc_mir" }
prettyplease = "0.2.16"
syn = { version = "2.0.46", features = ["parsing"], default-features = false }
