[package]
name = "idlc_mir_passes"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idlc_ast = { path = "../idlc_ast" }
idlc_ast_passes = { path="../idlc_ast_passes" }
idlc_errors = { version = "0.2.0", path = "../idlc_errors" }
idlc_mir = { path="../idlc_mir" }
thiserror = "1.0.59"
